--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <span>{{ title }} app is running!</span>
 <!--<router-outlet></router-outlet>-->
-<app-empleados></app-empleados>
+<!--<app-empleados></app-empleados>-->
 
+<app-calculadora></app-calculadora>
