--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
-<span>{{ title }} app is running!</span>
+<div class="container">
+  <h1>{{ title }} app is running!</h1>
+  <app-directivas></app-directivas>
+</div>
+
 <!--<router-outlet></router-outlet>-->
 <!--<app-empleados></app-empleados>-->
-
-<app-calculadora></app-calculadora>
+<!--<app-calculadora></app-calculadora>-->
